# polaris

./: .env.example  .gitignore  alembic.ini  auth_helper.py  demo_basic_permission.py  demo_business_management.py  demo_content_publish.py  demo_instagram_basic.py  demo_instagram_manage_messages.py  demo_manage_comments.py  demo_manage_insights.py  demo_manage_messages.py  demo_pages_manage_metadata.py  demo_pages_read_engagement.py  demo_pages_show_list.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 20240115_0001_001_initial_schema.py
src/polaris/: __init__.py  __main__.py  config.py
src/polaris/cli/: __init__.py  accounts.py  analytics.py  content.py  leads.py  main.py  schedule.py
src/polaris/models/: __init__.py  account.py  analytics.py  base.py  content.py  lead.py  schedule.py
src/polaris/repositories/: __init__.py  account_repository.py  analytics_repository.py  base_repository.py  content_repository.py  lead_repository.py  schedule_repository.py
src/polaris/services/: __init__.py  lead_service.py  scheduler_service.py
src/polaris/services/ai/: __init__.py  claude_client.py  cloudinary_uploader.py  content_generator.py  image_generator.py  lead_responder.py  prompts.py  video_generator.py
src/polaris/services/instagram/: __init__.py  auth.py  client.py  messenger.py  publisher.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_models.py  test_repositories.py  test_services.py
