[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "polaris"
version = "0.1.0"
description = "Instagram Management Suite for Polaris Innovations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Polaris Innovations"}
]
keywords = ["instagram", "social-media", "ai", "content-generation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "sqlalchemy>=2.0.23",
    "alembic>=1.13.0",
    "httpx>=0.25.0",
    "anthropic>=0.8.0",
    "apscheduler>=3.10.0",
    "typer[all]>=0.9.0",
    "rich>=13.7.0",
    "tenacity>=8.2.0",
    "ratelimit>=2.2.1",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "respx>=0.20.0",
]

[project.scripts]
polaris = "polaris.cli.main:app"

[project.urls]
Homepage = "https://github.com/polarisinnovations/polaris"
Repository = "https://github.com/polarisinnovations/polaris"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
